--- a/style.css
+++ b/style.css
@@ -7,10 +7,11 @@
 body{
     width: 100%;
     height: 100%;
-    background: url(https://images.unsplash.com/photo-1518173946687-a4c8892bbd9f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=387&q=80);
+    /* background: url(https://images.unsplash.com/photo-1518173946687-a4c8892bbd9f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=387&q=80);
     background-repeat: no-repeat;
     background-size: cover;
-    background-blend-mode: overlay;
+    background-blend-mode: overlay; */
+    background: #3a6864;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -20,10 +21,11 @@ body{
     position: absolute;
     top: 20%;
     background: #ffff;
-    padding: 50px;
-    width: 30%;
+    padding: 60px;
     height: 50%;
-    
+    box-shadow: 0px 20px 50px 0px rgba(80, 100, 100, 60);
+    border-radius: 10%;
+
 }
 .main form{
     display: flex;
@@ -36,23 +38,32 @@ body{
     color: #404b56;
 }
 input{
-   margin: 1px;
-   padding: 5px;
+   margin-top: 5px;
+   padding: 3px;
    width: 100%;
+   height: 40px;
    font-weight: bold;
+   outline: none;
+   font-size: 15px;
+   letter-spacing: 0.1em;
+   border: 1px solid #333;
 }
 label{
-    margin: 20px 0px 0px 0px;
+    margin: 15px 0px 0px 0px;
     font-weight: bold;
+}
+.a{
+    margin-top: 10px;
+    font-size: 10px;
 }
 
 a{
     text-decoration: none;
-    color: #404b56ce;
+    color: #3a6864;
     font-weight: bold;
-    margin-top: 15px;
-    font-size: 10px;
-    letter-spacing: 1px;
+}
+a:hover{
+    color: #43e38b;
 }
 .submit{
     display: flex;
@@ -68,7 +79,7 @@ a{
     font-size: 90%;
     transition: 0.5s;
     color: #ffff;
-    width: 50%;
+    width: 100%;
     text-transform: uppercase;
 }
 
